--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "kawai-todo",
+    "name": "kawai To Do",
     "slug": "kawai-todo",
     "privacy": "public",
     "sdkVersion": "31.0.0",
